name:                marathon-hs
version:             0.1.0.0
synopsis:            Haskell Client for Marathon
description:         Please see README.md
homepage:            http://github.com/jhedev/marathon-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
copyright:           2016 Joel Hermanns
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Marathon
                     , Network.Marathon.V2.Apps
                     , Network.Marathon.V2.Artifacts
                     , Network.Marathon.V2.Deployments
                     , Network.Marathon.V2.Events
                     , Network.Marathon.V2.EventsSub
                     , Network.Marathon.V2.Groups
                     , Network.Marathon.V2.Info
                     , Network.Marathon.V2.Leader
                     , Network.Marathon.V2.Queue
                     , Network.Marathon.V2.Tasks
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , unordered-containers
                     , either
                     , servant
                     , servant-client
                     , text
  default-language:    Haskell2010

executable marathon-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marathon-hs
  default-language:    Haskell2010

test-suite marathon-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marathon-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhedev/marathon-hs
